Update Step7.md